@@ -132,15 +132,13 @@ def connect_text_view(text_view):
     text_view.set_data("lengthlib_handler_id", handler_id)
     return handler_id
 
-def disconnect_text_view_require(text_view):
-    assert text_view.get_data("lengthlib_handler_id") is not None
-
-@gaupol.util.contractual
+@gaupol.util.asserted_return
 def disconnect_text_view(text_view):
     """Disconnect text view from showing line lengths in the margin."""
 
     text_view.set_border_window_size(gtk.TEXT_WINDOW_RIGHT, 0)
     handler_id = text_view.get_data("lengthlib_handler_id")
+    assert handler_id is not None
     text_view.set_data("lengthlib_handler_id", None)
     return text_view.disconnect(handler_id)
 
